<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_1"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/black"
        android:background="@color/toolbar_color">

        <ImageView
            android:layout_width="23sp"
            android:contentDescription="@string/logo"
            android:id="@+id/img_back"
            android:layout_height="23sp"
            android:layout_gravity="start"
            android:src="@drawable/back_btn"/>
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Search Products"
            android:textSize="23sp"
            android:textColor="#000"
            android:layout_gravity="center"
            />
    </android.support.v7.widget.Toolbar>
    <View
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:background="#393838"/>
    <LinearLayout
        android:id="@+id/cart_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Your_cart_is_empty"
            android:src="@drawable/placeholder_error"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/prouct_not_found"/>

        <TextView
            android:id="@+id/cart_empty_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/base_margin"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"/>
</LinearLayout>