<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:background="#f2f3f5"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="#000"
        android:text="   The following terms and conditions govern our relationship and your access and use of our website."/>

    <ScrollView
        android:paddingTop="5dp"
        android:layout_below="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sc_view"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_bg"
                android:orientation="vertical"
                android:padding="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="7dp"
                        android:text="ACCURACY OF CONTENT:"
                        android:textColor="@color/colorBlack"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/img_minus_accuracy"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:visibility="visible"
                        android:src="@mipmap/minus_black" />

                    <ImageView
                        android:id="@+id/img_plus_accuracy"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:visibility="gone"
                        android:src="@mipmap/plus_black" />
                </RelativeLayout>

                <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                    android:id="@+id/expand_accuracy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ael_duration="500"
                    app:ael_expanded="true"
                    android:background="#fff"
                    app:ael_interpolator="linear"
                    app:ael_orientation="vertical">
                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/accuracy_text"
                        android:textColor="#2d2c2c" />

                </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_bg"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:padding="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="7dp"
                        android:text="ORDER ACCEPTANCE:"
                        android:textColor="@color/colorBlack"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/img_minus_order"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:src="@mipmap/minus_black" />

                    <ImageView
                        android:id="@+id/img_plus_order"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:src="@mipmap/plus_black" />
                </RelativeLayout>

                <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                    android:id="@+id/expand_order_acceptance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ael_duration="500"
                    app:ael_expanded="false"
                    app:ael_interpolator="linear"
                    android:background="#fff"
                    app:ael_orientation="vertical">
                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/order_text"
                        android:textColor="#2d2c2c" />

                </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_bg"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:padding="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="7dp"
                        android:text="ACKNOWLEDGEMENT AND ACCEPTANCE OF ORDER:"
                        android:textColor="@color/colorBlack"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/img_minus_ack"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:src="@mipmap/minus_black" />

                    <ImageView
                        android:id="@+id/img_plus_ack"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:src="@mipmap/plus_black" />
                </RelativeLayout>

                <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                    android:id="@+id/expand_order_ack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ael_duration="500"
                    android:background="#fff"
                    app:ael_expanded="false"
                    app:ael_interpolator="linear"
                    app:ael_orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:textColor="#2d2c2c" />
                </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_bg"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:padding="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="7dp"
                        android:text="DELAYS:"
                        android:textColor="@color/colorBlack"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/img_minus_delay"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:src="@mipmap/minus_black" />

                    <ImageView
                        android:id="@+id/img_plus_delay"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:src="@mipmap/plus_black" />
                </RelativeLayout>


                <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                    android:id="@+id/expand_order_delay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ael_duration="500"
                    app:ael_expanded="false"
                    android:background="#fff"
                    app:ael_interpolator="linear"
                    app:ael_orientation="vertical">
                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:textColor="#2d2c2c" />
                </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_bg"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:padding="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="7dp"
                        android:text="ORDER PLACEMENT:"
                        android:textColor="@color/colorBlack"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/img_minus_placement"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:src="@mipmap/minus_black" />

                    <ImageView
                        android:id="@+id/img_plus_placement"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:src="@mipmap/plus_black" />
                </RelativeLayout>

                <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                    android:id="@+id/expand_order_placement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ael_duration="500"
                    android:background="#fff"
                    app:ael_expanded="false"
                    app:ael_interpolator="linear"
                    app:ael_orientation="vertical">
                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_order_place"
                        android:textColor="#2d2c2c" />

                </com.github.aakira.expandablelayout.ExpandableRelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
